## Process this file with automake to produce Makefile.in

INCLUDES = -I$(top_builddir)/include

bin_SCRIPTS=csv_parser-config

lib_LTLIBRARIES = libcsv_parser.la

libcsv_parser_la_SOURCES = csv_parser.cpp csv_parser.hpp

csv_parserdir = $(includedir)/csv_parser

csv_parser_HEADERS = csv_parser.hpp
